--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <li>JavaScript</li>
         <li>Java</li>
         <li>Python</li>
+        <li>Python</li>
+        <li>Python</li>
     </ul>
 </body>
 </html>
